--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "new",
   "version": "1.0.0",
-  "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -12,6 +11,7 @@
     "node-sass": "^4.12.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-html-id": "^0.1.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
@@ -29,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
