--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "movies",
   "version": "1.0.0",
-  "description": "",
+  "description": "This challenge allows you to practice the concepts and techniques learned over the past Sprint and apply them in a concrete project. This Sprint explored Advanced Web Applications, focusing on testing, client-side authentication, hosting web apps, and PUT and DELETE requests.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LambdaSchool/SPA-Routing-React"
+    "url": "git+https://github.com/LambdaSchool/SPA-Routing-React.git"
   },
   "author": "Lambda School",
   "license": "ISC",
@@ -20,5 +20,6 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2"
-  }
+  },
+  "devDependencies": {}
 }
